<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".modules.signUpModule.ForgotPasswordFragment">

    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:id="@+id/scrollViewLogin"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <TextView
                    android:text="@string/txt_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="@dimen/txt_size_heading"
                    android:textColor="@color/txt_color_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="104dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/source_sanspro_bold"/>

            <TextView
                    android:text="@string/txt_enter_your_email_below"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="center"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:textColor="@color/txt_color_heading"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"/>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance"
                    android:hint="@string/txt_email"
                    app:hintTextAppearance="@style/EditTextHintUp"
                    android:textColorHint="@color/txt_input_hint_color"
                    android:id="@+id/TILEmailForgotPassword"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_Email"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="@dimen/et_input_size_16dp"
                        android:backgroundTint="@color/txt_input_line_color"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="@color/txt_color_heading"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                    android:text="@string/txt_reset_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnResetPassword"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/bg_btn_login"
                    android:fontFamily="@font/source_sanspro_bold"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/TILEmailForgotPassword"/>
            <TextView
                    android:text="@string/txt_go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGoBack"
                    android:textColor="@color/txt_color_heading"
                    android:textSize="@dimen/txt_forgot_password_size_12dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    app:layout_constraintTop_toBottomOf="@+id/btnResetPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"/>

            <ImageView
                    android:src="@drawable/bottom_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivBottomView"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>