<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.signInModule.SignInFragment">


    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:id="@+id/scrollViewLogin"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/txt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="@dimen/txt_size_heading"
                    android:textColor="@color/txt_color_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="96dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/source_sanspro_bold"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance"
                    android:hint="@string/txt_email"
                    app:hintTextAppearance="@style/EditTextHintUp"
                    android:textColorHint="@color/txt_input_hint_color"
                    android:id="@+id/textInputLayout">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="@dimen/et_input_size_16dp"
                        android:backgroundTint="@color/txt_input_line_color"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="@color/txt_color_heading"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance"
                    android:hint="@string/txt_password"
                    app:hintTextAppearance="@style/EditTextHintUp"
                    android:textColorHint="@color/txt_input_hint_color"
                    app:passwordToggleEnabled="true"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/textInputLayout2">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="@dimen/et_input_size_16dp"
                        android:backgroundTint="@color/txt_input_line_color"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="@color/txt_color_heading"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:text="@string/txt_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLogin"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:textAllCaps="true"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/bg_btn_login"
                    android:fontFamily="@font/source_sanspro_bold"/>
            <Button
                    android:text="@string/txt_continue_with_facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLoginFb"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ico_fb"
                    android:drawableStart="@drawable/ico_fb"
                    android:paddingEnd="@dimen/btn_drawable_padding_end_size_20dp"
                    android:paddingRight="@dimen/btn_drawable_padding_end_size_20dp"
                    android:paddingLeft="@dimen/btn_drawable_padding_size_30dp"
                    android:paddingStart="@dimen/btn_drawable_padding_size_30dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:background="@drawable/bg_btn_fb_login"
                    android:fontFamily="@font/source_sanspro_bold"/>
            <Button
                    android:text="@string/txt_continue_with_google"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLoginGoogle"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnLoginFb"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:fontFamily="@font/source_sanspro_bold"
                    android:background="@drawable/bg_btn_google_login"
                    android:drawableLeft="@drawable/ico_google"
                    android:drawableStart="@drawable/ico_google"
                    android:paddingLeft="@dimen/btn_google_drawable_padding_left_size_25dp"
                    android:paddingStart="@dimen/btn_google_drawable_padding_left_size_25dp"
                    android:paddingEnd="@dimen/btn_drawable_padding_end_size_20dp"
                    android:paddingRight="@dimen/btn_drawable_padding_end_size_20dp"/>
            <TextView
                    android:text="@string/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvForgotPassword"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:textColor="@color/txt_color_heading"
                    android:textSize="@dimen/txt_forgot_password_size_12dp"
                    app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
                    app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/source_sans_pro_regular"/>
            <TextView
                    android:text="@string/txt_need_to_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNeedToRegister"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:textColor="@color/txt_color_heading"
                    android:textSize="@dimen/txt_forgot_password_size_12dp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
                    app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle"
                    android:layout_marginTop="8dp"/>
            <ImageView
                    android:src="@drawable/bottom_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivBottomView"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>