<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".modules.signUpModule.CongratulationsFragment">

    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:id="@+id/scrollViewLogin"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/txt_congratulations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="@dimen/txt_size_heading"
                    android:textColor="@color/txt_color_heading"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:fontFamily="@font/source_sanspro_bold"/>
            <TextView
                    android:text="@string/txt_your_account_has"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="center"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:textColor="@color/txt_color_heading"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"/>
            <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_profile_pic"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/frameLayout">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ico_camera"
                        android:layout_gravity="center_vertical|center"
                        android:id="@+id/imageView">
                </ImageView>
            </FrameLayout>
            <TextView
                    android:text="@string/txt_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textColorHint="@color/txt_input_hint_color"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:textSize="@dimen/txt_forgot_password_size_12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance"
                    android:hint="@string/txt_shop_name"
                    app:hintTextAppearance="@style/EditTextHintUp"
                    android:textColorHint="@color/txt_input_hint_color"
                    android:id="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="@dimen/et_input_size_16dp"
                        android:backgroundTint="@color/txt_input_line_color"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="@color/txt_color_heading"
                        android:inputType="text"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance"
                    android:hint="@string/txt_level"
                    app:hintTextAppearance="@style/EditTextHintUp"
                    android:textColorHint="@color/txt_input_hint_color"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/textInputLayout2">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="@dimen/et_input_size_16dp"
                        android:backgroundTint="@color/txt_input_line_color"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="@color/txt_color_heading"
                        android:inputType="number"
                        android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/error_appearance"
                    android:hint="@string/txt_shop_managed_by"
                    app:hintTextAppearance="@style/EditTextHintUp"
                    android:textColorHint="@color/txt_input_hint_color"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/textInputLayout3">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="@dimen/et_input_size_16dp"
                        android:backgroundTint="@color/txt_input_line_color"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="@color/txt_color_heading"
                        android:inputType="number"
                        android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:text="@string/txt_create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCreate"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/btn_txt_size_14dp"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/bg_btn_login"
                    android:fontFamily="@font/source_sanspro_bold"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"/>

            <ImageView
                    android:src="@drawable/bottom_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivBottomView"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnRegister"/>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>